assets/style.css
* {
    cursor: url('images/spaceshuttle.png'), auto;
    font-family: 'Orbitron', monospace, sans-serif;
    color: white;
}
html, body {
    height: 100%;
}

body {
    background-image: url('images/sunAndEarth.gif');
    background-position: center;
    transition: background-image ease-in-out 0.7s;
}

header {
    margin-top: 1vh;
}

header button:nth-child(1) {
    margin-right: 10px;
}

#quote {
    display: flex;
    text-align: center;
}

.navbar {
    width: min-content;
}

header h1 {
    font-size: 60px;
    text-shadow: 1px 5px rgb(203, 203, 56);
    animation: glowing 2s;
    border-radius: 20%;
}

header h3 {
    width: min-content;
}

.container {
    margin-top: 30%;
}

.sun-desc {
    display: none;
}

.zodiac-desc {
    display: none;
}

.zodiacs {
    width: 80vw;
    margin-top: 5%;
    margin-bottom: 3%;
    display: flex;
    animation: glowing 4s;
    animation-delay: 1.5s;
    border-radius: 20%;
}

.zodiac-img img {
    width: 100%;
}

.zodiac-img img:hover {
    cursor: url('images/spaceshuttle2.png'), auto;
}

.hovered {
    background-image: url('images/backgroundBlank.png');
}

.zodiac-img {
    margin-left: 1%;
    margin-right: 1%;
    transition: transform ease-in-out 0.5s, border-radius ease-in-out 0.3s;
}

.zodiac-img:hover {
    transform: scale(1.3);
    outline: ridge 2px rgba(255, 230, 0, 0.636);
    border-radius: 50%;
    box-shadow: 1px 1px 5px 5px #fbff0095;
    background-color: rgba(0, 0, 0, 0.296);
}

footer {
    font-size: 20px;
}

@keyframes glowing {
    0% { box-shadow: inset 3000px 0 5px #fbff00; }
    50% { box-shadow: inset 0 0 20px #e2ed6c; }
    100% { box-shadow: inset 0 0 1px #fff; }
}


@media (max-width: 991px) {
    header h1 {
        font-size: 40px;
    }
}

@media (max-width: 767px) {
    header {
        flex-direction: column;
        align-items: center;
    }
    
    header h1, header h3 {
        text-align: center;
        width: auto;
        margin: 10px 0;
    }
    
    .container {
        margin-top: 10%;
    }
    
    .zodiacs {
        flex-wrap: wrap;
        justify-content: center;
        width: 100%;
        margin-top: 3%;
    }
    
    .zodiac-img {
        margin: 5px;
        width: 0%;
    }
}

